--- a/metodo-esp-pv-1-p1.html
+++ b/metodo-esp-pv-1-p1.html
@@ -189,7 +189,7 @@ background-color: #27ae60;
 </style>
 <script>
 		function redirecionar() {
-			window.location.href = "https://twitter.com/home";
+			window.location.href = "https://oespiao.shop/index.php/metodo-esp-pv-1-p2/";
 		}
 </script>
 <form>
